syntax = "proto3";

package api;

option go_package = "github.com/hshibli2002/Audiowave-gRPC-Hub/pkg/grpcapi";


service PlaylistService {
  // CREATE REQUEST
  rpc CreatePlaylist(CreatePlaylistRequest) returns (CreatePlaylistResponse) {}

  // READ REQUEST
  rpc GetPlaylistById(GetPlaylistByIdRequest) returns (GetPlaylistByIdResponse) {}
  rpc GetPlaylistByTitle(GetPlaylistByTitleRequest) returns (GetPlaylistByTitleResponse) {}
  rpc GetPlaylistsByArtistId(GetPlaylistByArtistIdRequest) returns (GetPlaylistByArtistIdResponse) {}
  rpc GetAllPlaylists(GetAllPlaylistsRequest) returns (GetAllPlaylistsResponse) {}

  // UPDATE REQUEST
  rpc UpdatePlaylistTitle(UpdatePlaylistTitleRequest) returns (UpdatePlaylistTitleResponse) {}
  rpc AddSongToPlaylist(SongToPlaylistRequest) returns (SongToPlaylistResponse) {}
  rpc RemoveSongFromPlaylist(SongToPlaylistRequest) returns (SongToPlaylistResponse) {}

  // DELETE REQUEST
  rpc DeletePlaylist(DeletePlaylistRequest) returns (DeletePlaylistResponse) {}
}

message Playlist {
  int64 playlist_id = 1;
  string name = 2;
  int64 artist_id = 3;
  string release_date = 4;
  int32 songs_count = 5;
  int32 likes_count = 6;
}

message CreatePlaylistRequest {
  string name = 1;
  int64 artist_id = 2;
  string release_date = 3;
}

message CreatePlaylistResponse {
  string message = 1;
  bool Success = 2;
}

message GetPlaylistByIdRequest {
  int64 id = 1;
}

message GetPlaylistByIdResponse {
  Playlist playlist = 1;
  bool Success = 2;
}

message GetPlaylistByTitleRequest {
  string title = 1;
}

message GetPlaylistByTitleResponse {
  repeated Playlist playlists = 1;
  bool Success = 2;
}

message GetPlaylistByArtistIdRequest {
  int64 artist_id = 1;
}

message GetPlaylistByArtistIdResponse {
  repeated Playlist playlists = 1;
  bool Success = 2;
}

message GetAllPlaylistsRequest {}

message GetAllPlaylistsResponse {
  repeated Playlist playlists = 1;
  bool Success = 2;
}

message UpdatePlaylistTitleRequest {
  int64 playlist_id = 1;
  string name = 2;
}

message UpdatePlaylistTitleResponse {
  string message = 1;
  bool success = 2;
}

message SongToPlaylistRequest {
  int64 playlist_id = 1;
  int64 song_id = 2;
}

message SongToPlaylistResponse {
  bool success = 1;
  string message = 2;
}

message DeletePlaylistRequest {
  int64 playlist_id = 1;
}

message DeletePlaylistResponse {
  bool success = 1;
  string message = 2;
}


